--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -17,9 +17,7 @@ sites:
   - name: Knowledge Base
     url: https://wiki.gegenlicht.net
     icon: https://www.dokuwiki.org/lib/tpl/dokuwiki/images/logo.png
-    expectedStatusCodes:
-      - 200
-      - 302
+    maxRedirects: 10
 
   - name: Appointment Planner
     url: https://terminplaner.gegenlicht.net
